# VistorIA-back

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
vistoria_back/: image_descriptor.py  main.py
vistoria_back/routes/: upload_bp.py
vistoria_back/utils/: generate_pdf.py
